fix: adjust intro spacing for laptops

--- a/components/Header.module.scss
+++ b/components/Header.module.scss
@@ -38,7 +38,7 @@
   @media (min-width: $media-min-small) {
     border: 0;
     flex-direction: row-reverse;
-    padding: 4.2rem 0;
+    padding: 3rem 0;
   }
 }
 
